# ctf-bot-helper

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.simple  README.md  bot.py  docker-compose.yml  pyproject.toml
src/ctf_bot/: __init__.py  __main__.py  config.py  discord_bot.py
src/ctf_bot/integrations/: google_docs.py
tests/: conftest.py  test_discord_bot.py  test_google_docs.py
